- ADD: Added support for new 'vegindex' trait type which uses Spriggles to extract the vegetation index from images.